# pycosdk

./: pyproject.toml
pycosdk/: __init__.py  callback.py  connectprobe.py  deviceenums.py  devicestructs.py  ps3000a.py  ps5000a.py  ps6000.py  ps6000a.py  psosca.py  status.py  version.py
src/pycosdk/: ps3000a.py  ps6000a.py  psosca.py
