[build-system]
requires = ["uv_build>=0.6.6"]
build-backend = "uv_build"

[project]
name = "pycosdk"
version = "0.0.10"
description = "Yet another wrapper for the PicoSDK"
requires-python = ">=3.11"
authors = [{name="Richard Petri", email="git@rpls.de"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

[dependency-groups]
dev = [
  "mypy",
  "ruff",
]

[project.urls]
"Homepage" = "https://github.com/rpls/pycosdk"
"Bug Reports" = "https://github.com/rpls/pycosdk/issues"
"Source" = "https://github.com/rpls/pycosdk/"

[tool.mypy]
python_version = "3.11"
